popup readability improvements, Fixed a bug in a certain case where values were not showing up after page change

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
     padding: .4em;
     font-size: 12px;
     vertical-align: middle;
+    font-weight: 600;
 }
 .delta::after{
     content: "";
@@ -68,7 +69,7 @@
     border-bottom: 4px solid;
 }
 .delta.negative{
-    color:#d60606;
+    color: #ff2727;
 }
 .delta.negative::after{
     border-bottom: 0;
